Mi primer repositorio

--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
        U = Untracked / Sin Seguimiento
     a = Added / Añadido
     m = modified / modificado
+
+    git commit -m 'comentario' version de las modificaciones
 -->
